--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
-spring.datasource.username=postgres
-spring.datasource.password=pass
+spring.datasource.username=kimsangjun
+spring.datasource.password=withhan719
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.thymeleaf.cache=false
@@ -12,3 +14,5 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
 spring.main.allow-bean-definition-overriding=true
+
+#spring.profiles.active=pointcut
