--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
-spring.datasource.username=kimsangjun
-spring.datasource.password=withhan719
+spring.datasource.username=
+spring.datasource.password=password
 
+
+# create or update
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
