--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,22 @@ spring.datasource.password=password
 
 
 # create or update
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+# ??? SQL? ???, ??? console? ???
+spring.jpa.properties.hibernate.format_sql=true 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.thymeleaf.cache=false
 
+# ??????? ???? UI???? ???? ??? ???? ?? ???.
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.security.user.name=user
+spring.security.user.password=1111
 
 #spring.profiles.active=pointcut
