--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=pass
 
 
 # create or update
@@ -19,7 +19,7 @@ spring.devtools.restart.enabled=true
 
 spring.main.allow-bean-definition-overriding=true
 
-spring.security.user.name=user
-spring.security.user.password=1111
+#spring.security.user.name=user
+#spring.security.user.password=1111
 
 #spring.profiles.active=pointcut
