인증 프로세스 Form인증 구현 마무리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=pass
 
 
 # create or update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # ??? SQL? ???, ??? console? ???
 spring.jpa.properties.hibernate.format_sql=true 
